FIX - Providers covered when nav expanded

--- a/public/index.scss
+++ b/public/index.scss
@@ -35,13 +35,4 @@ div {
   &.footer {
     height: 15vh;
   }
-
-  // Source: https://stackoverflow.com/a/50925544/11571888
-  &.center-screen {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-  }
 }
