--- a/src/components/elements/common/userControl/signIn/main.module.scss
+++ b/src/components/elements/common/userControl/signIn/main.module.scss
@@ -1,15 +1,18 @@
 @use "../../../../../../public/colors";
 
 $button-bg-color: darken(colors.$color-black-50, 5%);
-$button-distance: 1rem;
+$button-distance: 0.85vw;
+
+.providerFrame {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30vh;
+}
 
 .providerButton {
   border: 0;
   background-color: $button-bg-color;
   font-size: 2rem;
-  margin-left: $button-distance;
-
-  &:first-child {
-    margin-left: 0;
-  }
+  margin: 0 $button-distance;
 }
